# turbo-trooper-game-boy-version

./: CMakeLists.txt  MakeFile.txt  Makefile  README.md  main.c  make.bat  run.bat
art/: tile_set.gbr
art/char/player/: player.ase  player_compressed.ase
art/tile_maps/: template.gbm
gbdk-implementation/: CMakeLists.txt
gbdk-implementation/art/char/player/: player_compressed.ase
gbdk-implementation/src/assets/sprites/: PlayerTestSprite.h
gbdk-implementation/src/game/: GameWorld.c  GameWorld.h
gbdk-implementation/src/game/physics/: PhysicsTileMap.c
gbdk-implementation/src/util/: Util.c
gbstudio-implementation/Turbo Trooper/: Turbo Trooper.gbsproj
gbtd-sprite-saves/: cracked_stone.gbr
src/: Test.c  main.c
src/Memory/: Memory.c
src/assets/sprites/: BricksSingleTile.c  BricksSingleTile.h  CollisionMarkSprite.c  CollisionMarkSprite.h  CrackedStoneTile.c  CrackedStoneTile.h  PlayerTestSprite.c  PlayerTestSprite.h  RectTestSprite.c  RectTestSprite.h  TileSet.c  TileSet.h
src/assets/tile_maps/: TestTileMap.c  TestTileMap.h
src/game/: GameWorld.h
src/game/physics/: PhysicsBody.c  PhysicsBody.h  PhysicsTileMap.h  PhysicsWorld.h  Rect.c  Rect.h  Vector2.h
src/graphics/: Graphics.c  Graphics.h  MetaSprite.c  MetaSprite.h  MetaSprite16x16.c  MetaSprite16x16.h  Sprite.c  Sprite.h
src/graphics/sprite/: MetaSprite.c  MetaSprite.h  Sprite.c  Sprite.h
src/include/: Test.c
src/memory/: Memory.c  Memory.h
src/system/: System.c  System.h
src/system/memory/: Memory.c  Memory.h
src/util/: TypeDefs.h  Util.c  Util.h
turbo-trooper/: Makefile  main.c
(+7 files in other folders)
